Development/KSJApi.Inc/KSJApiBase.h

	enum KSJ_DEVICETYPE
	{
		KSJ_UC130C_MRNN = 0,   
		KSJ_UC130M_MRNN,       
		KSJ_RESERVED0,         
		KSJ_UC320C_MRNN,       
		KSJ_UC130C_MRYN,       
		KSJ_UC130M_MRYN,       
		KSJ_RESERVED1,         
		KSJ_UC320C_MRYN,       
		KSJ_UC500C_MRNN,       
		KSJ_UC500M_MRNN,       
		KSJ_UC500C_MRYN,       
		KSJ_UC500M_MRYN,       
		KSJ_UC320_OCR,         
		KSJ_UC900C_MRNN,       
		KSJ_UC1000C_MRNN,      
		KSJ_UC900C_MRYN,       
		KSJ_UC1000C_MRYN,      
		KSJ_MUC120C_MRYYO,     
		KSJ_MUC120M_MRYYO,     
		KSJ_UD140C_SRNN,       
		KSJ_UD140M_SRNN,       
		KSJ_UC36C_MGNN,        
		KSJ_UC36M_MGNN,        
		KSJ_UC36C_MGYN,        
		KSJ_UC36M_MGYN,        
		KSJ_UC900C_MRYY,       
		KSJ_UC1000C_MRYY,      
		KSJ_UC1400C_MRYY,      
		KSJ_UC36C_MGYY,        
		KSJ_UC36M_MGYY,        
		KSJ_UC320C_MRYY,       
		KSJ_UC500C_MRYY,       
		KSJ_UC500M_MRYY,       
		KSJ_MUC130C_MRYN,      
		KSJ_MUC130M_MRYN,      
		KSJ_MUC320C_MRYN,      
		KSJ_MUC36C_MGYYO,      
		KSJ_MUC36M_MGYYO,      
		KSJ_MUC130C_MRYY,      
		KSJ_MUC130M_MRYY,      
		KSJ_MUC320C_MRYY,      
		KSJ_MUC500C_MRYYO,     
		KSJ_MUC500M_MRYYO,     
		KSJ_MUC900C_MRYY,      
		KSJ_MUC1000C_MRYY,     
		KSJ_MUC1400C_MRYY,     
		KSJ_UD205C_SGYY,       
		KSJ_UD205M_SGYY,       
		KSJ_UD274C_SGYY,       
		KSJ_UD274M_SGYY,       
		KSJ_UD285C_SGYY,       
		KSJ_UD285M_SGYY,       
		KSJ_MU3C500C_MRYYO,    
		KSJ_MU3C500M_MRYYO,    
		KSJ_MU3C1000C_MRYYO,   
		KSJ_MU3C1400C_MRYYO,   
		KSJ_MU3V130C_CGYYO,    
		KSJ_MU3V130M_CGYYO,    
		KSJ_MU3E130C_EGYYO,    
		KSJ_MU3E130M_EGYYO,    
		KSJ_MUC36C_MGYFO,      
		KSJ_MUC36M_MGYFO,      
		KSJ_MU3C120C_MGYYO,    
		KSJ_MU3C120M_MGYYO,    
		KSJ_MU3E200C_EGYYO,    
		KSJ_MU3E200M_EGYYO,    
		KSJ_MUC130C_MRYNO,     
		KSJ_MUC130M_MRYNO,     
		KSJ_MUC320C_MRYNO,     
		KSJ_U3C130C_MRYNO,     
		KSJ_U3C130M_MRYNO,     
		KSJ_U3C320C_MRYNO,     
		KSJ_U3C500C_MRYNO,     
		KSJ_U3C500M_MRYNO,     
		KSJ_MU3C1401C_MRYYO,   
		KSJ_MU3C1001C_MRYYO,   
		KSJ_MUC131M_MRYN,      
		KSJ_MU3C501C_MRYYO,    
		KSJ_MU3C501M_MRYYO,    
		KSJ_MUC120C_MGYYO,     
		KSJ_MUC120M_MGYYO,     
		KSJ_MU3E131C_EGYYO,    
		KSJ_MU3E131M_EGYYO,    
		KSJ_MU3E201C_EGYYO,    
		KSJ_MU3E201M_EGYYO,    
		KSJ_MISSING_DEVICE,	   
		KSJ_MU3S230C_SGYYO,    
		KSJ_MU3S230M_SGYYO,    
		KSJ_MU3S640C_SRYYO,    
		KSJ_MU3S640M_SRYYO,    
		KSJ_CUD285C_SGYYO,     
		KSJ_CUD285M_SGYYO,     
		KSJ_MU3S231C_SGYYO,    
		KSJ_MU3S231M_SGYYO,    
		KSJ_MU3S500C_SGYYO,    
		KSJ_MU3S500M_SGYYO,    
		KSJ_MU3S1200C_SRYYO,   
		KSJ_MU3S1200M_SRYYO,   
		KSJ_MU3L2K7C_AGYYO,    
		KSJ_MU3L2K7M_AGYYO,    
		KSJ_MU3L4K3C_AGYYO,    
		KSJ_MU3L4K3M_AGYYO,    
		KSJ_MU3HS2000C_SRYYO,  
		KSJ_MU3HS2000M_SRYYO,  
		KSJ_MU3HS500C_SGYYO,   
		KSJ_MU3HS500M_SGYYO,   
		KSJ_MU3HS230C_SGYYO,   
		KSJ_MU3HS230M_SGYYO,   
		KSJ_MU3HI400C_IGYYO,   
		KSJ_MU3HI400M_IGYYO,   
		KSJ_TEST_CAMERA,       
		KSJ_MU3HI401C_IGYYO, 
		KSJ_MU3HI401M_IGYYO,
		KSJ_MU3S40C_SGYYO, 
		KSJ_MU3S40M_SGYYO,     
		KSJ_MU3S210C_SRYYO,    
		KSJ_MU3S210M_SRYYO,    
		KSJ_MU3I130C_IGYYO,    
		KSJ_MU3I130M_IGYYO,    
		KSJ_MU3S321C_SGYYO,    
		KSJ_MU3S321M_SGYYO,     
		KSJ_MU3S641M_SRYYO,
		KSJ_MU3S1201M_SRYYO,
		KSJ_MU3HS2001M_SRYYO,
		KSJ_MU3S211M_SRYYO,
		KSJ_MU3C36C_MGYY,
		KSJ_MU3C36M_MGYY,
		KSJ_MU3HS1200C_SRYYO,
		KSJ_MU3HS1200M_SRYYO
	};
	KSJ_API  int __stdcall KSJ_LogSet(bool bEnable, const TCHAR *pszFolder);
	KSJ_API  int __stdcall KSJ_LogGet(bool *bEnable, TCHAR *pszFolder);
	KSJ_API  int __stdcall KSJ_GetVersion(OUT int *pnMaj1, OUT int *pnMaj2, OUT int *pnMin1, OUT int *pnMin2);
	KSJ_API  int __stdcall KSJ_GetErrorInfo(IN int nErrorNo, OUT TCHAR pszErrorInfo[256]);
	KSJ_API  int __stdcall KSJ_Init(void);
	KSJ_API  int __stdcall KSJ_UnInit(void);
	KSJ_API  int __stdcall KSJ_DeviceGetCount(void);
	KSJ_API  int __stdcall KSJ_DeviceGetInformation(IN int nIndex, OUT KSJ_DEVICETYPE *pDeviceType, OUT int *pnSerials, OUT unsigned short *pwFirmwareVersion);
	KSJ_API  int __stdcall KSJ_DeviceGetInformationEx(IN int nIndex, OUT KSJ_DEVICETYPE *pDeviceType, OUT int *pnSerials, OUT unsigned short *pwFirmwareVersion, OUT unsigned short *pwFpgaVersion);
	enum KSJ_PARAM
	{
		KSJ_EXPOSURE = 0,        
		KSJ_RED,                 
		KSJ_GREEN,               
		KSJ_BLUE,                
		KSJ_GAMMA,               
		KSJ_PREVIEW_COLUMNSTART, 
		KSJ_PREVIEW_ROWSTART,    
		KSJ_CAPTURE_COLUMNSTART, 
		KSJ_CAPTURE_ROWSTART,    
		KSJ_HORIZONTALBLANK,     
		KSJ_VERTICALBLANK,       
		KSJ_FLIP,                
		KSJ_BIN,                 
		KSJ_MIRROR,              
		KSJ_CONTRAST,            
		KSJ_BRIGHTNESS,          
		KSJ_VGAGAIN,             
		KSJ_CLAMPLEVEL,          
		KSJ_CDSGAIN,             
		KSJ_RED_SHIFT,           
		KSJ_GREEN_SHIFT,         
		KSJ_BLUE_SHIFT,          
		KSJ_COMPANDING,          
		KSJ_EXPOSURE_LINES,      
		KSJ_SATURATION,          
		KSJ_TRIGGERDELAY,        
		KSJ_STROBEDELAY,         
		KSJ_TRIGGER_MODE,        
		KSJ_TRIGGER_METHOD,      
		KSJ_BLACKLEVEL,          
		KSJ_BLACKLEVEL_THRESHOLD_AUTO, 
		KSJ_BLACKLEVEL_THRESHOLD_LO,   
		KSJ_BLACKLEVEL_THRESHOLD_HI    
	};
	KSJ_API  int __stdcall KSJ_GetParamRange(IN int nIndex, IN KSJ_PARAM Param, OUT int *pnMinValue, OUT int *pnMaxValue);
	KSJ_API  int __stdcall KSJ_SetParam(IN int nIndex, IN KSJ_PARAM Param, IN  int nValue);
	KSJ_API  int __stdcall KSJ_GetParam(IN int nIndex, IN KSJ_PARAM Param, OUT int *pnValue);
	KSJ_API  int __stdcall KSJ_ExposureTimeSet(int nIndex, float fExposureTimeMs);
	KSJ_API  int __stdcall KSJ_ExposureTimeGet(int nIndex, float *pfExpTimeMs);
	enum KSJ_ADDRESSMODE 
	{ 
		KSJ_SKIPNONE = 0, 
		KSJ_SKIP2, 
		KSJ_SKIP3, 
		KSJ_SKIP4, 
		KSJ_SKIP8  
	};
	KSJ_API  int __stdcall KSJ_CaptureGetDefaultFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	KSJ_API  int __stdcall KSJ_CaptureSetFieldOfView(int nIndex, int nColStart, int nRowStart, int nColSize, int nRowSize, KSJ_ADDRESSMODE AmCol, KSJ_ADDRESSMODE AmRow);
	KSJ_API  int __stdcall KSJ_CaptureGetFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	KSJ_API  int __stdcall KSJ_CaptureGetSize(int nIndex, int *pnWidth, int *pnHeight);
	KSJ_API  int __stdcall KSJ_CaptureGetSizeEx(int nIndex, int *pnWidth, int *pnHeight, int *pnBitCount);
	KSJ_API  int __stdcall KSJ_CaptureRawData(int nIndex, unsigned char *pRawData);
	KSJ_API  int __stdcall KSJ_CaptureRgbData(int nIndex, unsigned char *pRgbData);
	KSJ_API  int __stdcall KSJ_CaptureRgbDataEx(int nIndex, unsigned char *pRgbData, int *pnWidth, int *pnHeight, int *pnBitCount);
	KSJ_API  int __stdcall KSJ_HelperSaveToBmp(unsigned char *pData, int nWidth, int nHeight, int nBitCount, const TCHAR *pszFileName);
	KSJ_API  int __stdcall KSJ_HelperSaveToJpg(unsigned char *pData, int nWidth, int nHeight, int nBitCount, int nQulity, const TCHAR *pszFileName);
	KSJ_API  int __stdcall KSJ_PreviewGetDefaultFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	KSJ_API  int __stdcall KSJ_PreviewSetFieldOfView(int nIndex, int nColStart, int nRowStart, int nColSize, int nRowSize, KSJ_ADDRESSMODE AmCol, KSJ_ADDRESSMODE AmRow);
	KSJ_API  int __stdcall KSJ_PreviewGetFieldOfView(int nIndex, int *pnColStart, int *pnRowStart, int *pnColSize, int *pnRowSize, KSJ_ADDRESSMODE *pColAddressMode, KSJ_ADDRESSMODE *pRowAddressMode);
	KSJ_API  int __stdcall KSJ_PreviewGetSize(int nIndex, int *pnWidth, int *pnHeight);
	KSJ_API  int __stdcall KSJ_PreviewGetSizeEx(int nIndex, int *pnWidth, int *pnHeight, int *pnBitCount);
	KSJ_API  int __stdcall KSJ_PreviewSetPos(int nIndex, HWND hWnd, int x, int y, int nWidth, int nHeight);
	KSJ_API  int __stdcall KSJ_PreviewGetPos(int nIndex, int *px, int *py, int *pnWidth, int *pnHeight);
	enum KSJ_PREVIEWMODE
	{
		PM_RAWDATA, 
		PM_RGBDATA  
	};
	KSJ_API  int __stdcall KSJ_PreviewSetMode(int nIndex, KSJ_PREVIEWMODE PreviewMode);
	KSJ_API  int __stdcall KSJ_PreviewGetMode(int nIndex, KSJ_PREVIEWMODE *pPreviewMode);
	KSJ_API  int __stdcall KSJ_PreviewGetDefaultMode(int nIndex, KSJ_PREVIEWMODE *pPreviewMode);
	KSJ_API  int __stdcall KSJ_PreviewStart(int nIndex, bool bStart);
	KSJ_API  int __stdcall KSJ_PreviewPause(int nIndex, bool bPause);
	enum    KSJ_PREVIEWSTATUS 
	{
		PS_STOP, 
		PS_START,
		PS_PAUSE 
	};
	KSJ_API  int __stdcall KSJ_PreviewGetStatus(int nIndex, KSJ_PREVIEWSTATUS *pPreviewStatus);
	KSJ_API  int __stdcall KSJ_PreviewGetFrameRate(int nIndex, float *fFrameRate);
	KSJ_API  int __stdcall KSJ_PreviewGetPausedData(int nIndex, unsigned char *pData);
	KSJ_API  int __stdcall KSJ_PreviewGetPausedDataEx(int nIndex, unsigned char *pData, int *pnWidth, int *pnHeight, int *pnBitCount);
	KSJ_API  int __stdcall KSJ_PreviewStartEx(int nIndex, bool bStart, bool bParallel );